src/test/deca/syntax/valid/unary_expr.deca
/* Test de l'opération - unitaire*/

{
  int x;
  x = -2;
}
